update endpoint
