# docs/swagger.json
@@ -1487,54 +1487,6 @@
                 }
             }
         },
-        "/inscribe/list-nft-from-moralis": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "List NFT from Moralis",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Inscribe"
-                ],
-                "summary": "List NFT from Moralis",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Wallet Address",
-                        "name": "walletAddress",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Last Id",
-                        "name": "cursor",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Limit",
-                        "name": "limit",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/entity.Pagination"
-                        }
-                    }
-                }
-            }
-        },
         "/inscribe/nft-detail/{ID}": {
             "get": {
                 "security": [
@@ -1567,48 +1519,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/entity.InscribeBTCResp"
-                        }
-                    }
-                }
-            }
-        },
-        "/inscribe/nft-from-moralis": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "NFT from Moralis",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Inscribe"
-                ],
-                "summary": "NFT from Moralis",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Token Address",
-                        "name": "tokenAddress",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token Id",
-                        "name": "tokenId",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/nfts.MoralisToken"
                         }
                     }
                 }
@@ -3403,6 +3313,96 @@
                 }
             }
         },
+        "/token-moralis/nfts": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "List NFT from Moralis",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token Moralis"
+                ],
+                "summary": "List NFT from Moralis",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Wallet Address",
+                        "name": "walletAddress",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Last Id",
+                        "name": "cursor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Pagination"
+                        }
+                    }
+                }
+            }
+        },
+        "/token-moralis/nfts/{tokenAddress}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "NFT from Moralis",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token Moralis"
+                ],
+                "summary": "NFT from Moralis",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Token Address",
+                        "name": "tokenAddress",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Token Id",
+                        "name": "tokenId",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/nfts.MoralisToken"
+                        }
+                    }
+                }
+            }
+        },
         "/token-uri": {
             "get": {
                 "description": "get tokenUris",
@@ -4126,6 +4126,9 @@
                     "items": {
                         "type": "string"
                     }
+                },
+                "catureThumbnailDelayTime": {
+                    "type": "integer"
                 },
                 "closeMintUnixTimestamp": {
                     "type": "integer"
