# internal/delivery/http/inscribe_btc.go
@@ -220,43 +220,3 @@ func (h *httpDelivery) inscribeInfoToResp(input *entity.InscribeInfo) (*response
 	resp.Offset = input.Offset
 	return resp, nil
 }
-
-// @Summary List NFT from Moralis
-// @Description List NFT from Moralis
-// @Tags Inscribe
-// @Accept json
-// @Produce json
-// @Param walletAddress query string false "Wallet Address"
-// @Param cursor query string false "Last Id"
-// @Param limit query int false "Limit"
-// @Success 200 {object} entity.Pagination{}
-// @Router /inscribe/list-nft-from-moralis [GET]
-// @Security ApiKeyAuth
-func (h *httpDelivery) listNftFromMoralis(w http.ResponseWriter, r *http.Request) {
-	response.NewRESTHandlerTemplate(
-		func(ctx context.Context, r *http.Request, muxVars map[string]string) (interface{}, error) {
-			userWallet := ctx.Value(utils.SIGNED_WALLET_ADDRESS).(string)
-			userId := ctx.Value(utils.SIGNED_USER_ID).(string)
-			pag := entity.GetPagination(r)
-			return h.Usecase.ListNftFromMoralis(ctx, userId, userWallet, r.URL.Query().Get("walletAddress"), pag)
-		},
-	).ServeHTTP(w, r)
-}
-
-// @Summary NFT from Moralis
-// @Description NFT from Moralis
-// @Tags Inscribe
-// @Accept json
-// @Produce json
-// @Param tokenAddress query string false "Token Address"
-// @Param tokenId query string false "Token Id"
-// @Success 200 {object} nfts.MoralisToken{}
-// @Router /inscribe/nft-from-moralis [GET]
-// @Security ApiKeyAuth
-func (h *httpDelivery) nftFromMoralis(w http.ResponseWriter, r *http.Request) {
-	response.NewRESTHandlerTemplate(
-		func(ctx context.Context, r *http.Request, muxVars map[string]string) (interface{}, error) {
-			return h.Usecase.NftFromMoralis(ctx, r.URL.Query().Get("tokenAddress"), r.URL.Query().Get("tokenId"))
-		},
-	).ServeHTTP(w, r)
-}
