# internal/delivery/http/routes.go
@@ -156,8 +156,11 @@ func (h *httpDelivery) RegisterV1Routes() {
 	inscribe.HandleFunc("/nft-detail/{ID}", h.btcDetailInscribeBTC).Methods("GET")
 	inscribe.HandleFunc("/retry/{ID}", h.btcRetryInscribeBTC).Methods("POST")
 	inscribe.HandleFunc("/info/{ID}", h.getInscribeInfo).Methods("GET")
-	inscribe.HandleFunc("/list-nft-from-moralis", h.listNftFromMoralis).Methods("GET")
-	inscribe.HandleFunc("/nft-from-moralis", h.nftFromMoralis).Methods("GET")
+
+	tokenMoralis := api.PathPrefix("/token-moralis").Subrouter()
+	tokenMoralis.Use(h.MiddleWare.AccessToken)
+	tokenMoralis.HandleFunc("/nfts", h.listNftFromMoralis).Methods("GET")
+	tokenMoralis.HandleFunc("/nfts/{tokenAddress}", h.nftFromMoralis).Methods("GET")
 
 	//btc
 	eth := api.PathPrefix("/eth").Subrouter()
